[tool.poetry]
name = "kleep"
version = "0.1.0"
description = "A project for downloading and processing YouTube videos"
authors = ["Joao Nolasco Rocha <joaonolascorocha@gmail.com>"]
readme = "README.md"
packages = [{include = "kleep", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"  
pytubefix = "^10.1.1"
imageio-ffmpeg = "^0.5.1"
filetype = "^1.2.0"
music-tag = "^0.4.3"
numpy = "^1.26.0"
pydub = "^0.25.1"
click = "^8.3.1"
certifi = "^2026.2.25"
tqdm = "^4.67.3"
requests = "^2.33.1"


[tool.poetry.scripts]
kleep = "kleep.main:cli"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = ["ruff (>=0.14.2,<0.15.0)", "pyinstaller (>=6.19.0,<7.0.0)"]
